fix whitespace

--- a/src/App.css
+++ b/src/App.css
@@ -8,8 +8,11 @@
     --clr-7: #d9d9d6;
 }
 
-.app {
+/*===================================================================*/
+
+body {
     overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 /*===================================================================*/
